--- a/schedule/templates/schedule/base.html
+++ b/schedule/templates/schedule/base.html
@@ -48,6 +48,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'student_schedules' %}">Student Schedules</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'view_students' %}">View Students</a>
+                        </li>
                     </ul>
                 </div>
             </div>
