--- a/schedule/templates/schedule/base.html
+++ b/schedule/templates/schedule/base.html
@@ -48,11 +48,16 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'student_schedules' %}">Student Schedules</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'view_students' %}">View Students</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'admin_reports' %}">Reports</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="managementDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Manage
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="managementDropdown">
+                                <li><a class="dropdown-item" href="{% url 'view_students' %}">Students</a></li>
+                                <li><a class="dropdown-item" href="{% url 'view_periods' %}">Periods</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="{% url 'admin_reports' %}">Reports</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
