--- a/schedule/templates/schedule/view_periods.html
+++ b/schedule/templates/schedule/view_periods.html
@@ -40,7 +40,7 @@
                             <th>ID</th>
                             <th>Name</th>
                             <th>Days</th>
-                            <th>Period #</th>
+                            <th>Period ID</th>
                             <th>Time</th>
                             <th>Actions</th>
                         </tr>
