--- a/schedule/templates/schedule/create_period.html
+++ b/schedule/templates/schedule/create_period.html
@@ -60,9 +60,9 @@
                     
                     <div class="col-md-6">
                         <div class="mb-3">
-                            <label for="slot" class="form-label">Period Number</label>
-                            <input type="number" class="form-control" id="slot" name="slot" value="1" min="1" max="10" required>
-                            <div class="form-text">Period number (e.g., 1, 2, 3)</div>
+                            <label for="slot" class="form-label">Period Identifier</label>
+                            <input type="text" class="form-control" id="slot" name="slot" value="1" maxlength="10" required>
+                            <div class="form-text">Period identifier (e.g., 1, 2, A, B, L for Lunch)</div>
                         </div>
                         
                         <div class="mb-3">
