Add comprehensive course management features and fix student-related issues. Implemented templates for course CRUD operations, tested student management, admin reports, and course management features. Fixed ManyToMany relationship between students and sections using Enrollment model, and added safeguard for sections without teachers in reports.

--- a/schedule/templates/schedule/base.html
+++ b/schedule/templates/schedule/base.html
@@ -54,6 +54,9 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="managementDropdown">
                                 <li><a class="dropdown-item" href="{% url 'view_students' %}">Students</a></li>
+                                <li><a class="dropdown-item" href="{% url 'view_teachers' %}">Teachers</a></li>
+                                <li><a class="dropdown-item" href="{% url 'view_rooms' %}">Rooms</a></li>
+                                <li><a class="dropdown-item" href="{% url 'view_courses' %}">Courses</a></li>
                                 <li><a class="dropdown-item" href="{% url 'view_periods' %}">Periods</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="{% url 'admin_reports' %}">Reports</a></li>
