--- a/schedule/templates/schedule/delete_student_confirm.html
+++ b/schedule/templates/schedule/delete_student_confirm.html
@@ -29,7 +29,7 @@
                         This action cannot be undone.
                     </div>
                     
-                    <p>You are about to delete the following student:</p>
+                    <p>Are you sure you want to delete the following student:</p>
                     
                     <dl class="row mb-4">
                         <dt class="col-sm-4">Student ID</dt>
